--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>ツイート</h1>
+<table>
+<% @posts.each do |post| %>
+  <tr>
+    <td><%= post.content %></td>
+  </tr>
+<% end %>
+</table>
