--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
   <tr>
     <td><%= post.content %></td>
     <td><%= link_to '投稿確認', post_path(post.id) %></td>
+    <td><%= link_to '編集する', edit_post_path(post.id) %></td>
   </tr>
 <% end %>
 </table>
