--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,17 +1,2 @@
-<% if @post.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= @post.errors.count %>件のエラーがあります。</h2>
-    <ul>
-    <% @post.errors.full_messages.each do |msg|%>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-<%= form_with(model: @post, local: true) do |form| %>
-  <div class="post_content">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<h2>ツイートする</h2>
+<%= render 'form' %>
