--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
     <td><%= post.content %></td>
     <td><%= link_to '投稿確認', post_path(post.id) %></td>
     <td><%= link_to '編集する', edit_post_path(post.id) %></td>
+    <td><%= link_to '削除する', post_path(post.id), method: :delete ,date: { confirm: '本当に削除してもよろしいですか？'} %></td>
   </tr>
 <% end %>
 </table>
