--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @post, local: true) do |form| %>
+<%= form_with(model: @post, local: true, url: choose_new_or_edit ) do |form| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= @post.errors.count %>件のエラーがあります。</h2>
@@ -13,6 +13,6 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
-  <%= form.submit %>
+  <%= form.submit "ツイートする"%>
 <% end %>
 <%= link_to "一覧画面に戻る", posts_path %>
