HTML記述・編集

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,28 @@
-<h1>ツイート</h1>
-<table>
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.content %></td>
-    <td><%= link_to '投稿確認', post_path(post.id) %></td>
-    <td><%= link_to '編集する', edit_post_path(post.id) %></td>
-    <td><%= link_to 'ツイートを削除する', post_path(post.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
-  </tr>
-<% end %>
-</table>
-<%= link_to 'ツイートする', new_post_path %>
+<%= render 'header' %>
+
+<div>
+  <p class="content_post"><%= link_to 'ツイートする', new_post_path %></p>
+</div>
+
+<section>
+  <div>
+    <% @posts.each do |post| %>
+      <div class="content">
+        <p class="posting"><%= post.content %></p>
+        <div class="post_btn">
+          <p class="btn"><%= link_to '投稿を確認する', post_path(post.id) %></p>
+          <p class="btn"><%= link_to '編集する', edit_post_path(post.id) %></p>
+          <p class="btn"><%= link_to '削除する', post_path(post.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</section>
+
+<div>
+  <p class="content_post"><%= link_to 'ツイートする', new_post_path %></p>
+</div>
+
+<%= render 'footer' %>
+
+
