--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,41 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.header {
+  background-color: #7ec5f5;
+  color: #fff;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  margin-top: 0;
+}
+.header h1 {
+  margin: 0;
+}
+.content {
+  width: 500px;
+  background-color: #fff;
+  padding-left: 20px;
+  border: 1px solid;
+  border-color: #000000;
+  margin: 0 auto;
+}
+.post_btn {
+  display:flex;
+}
+.btn{
+  padding-left: 15px;
+}
+.content_post {
+  text-align: center;
+}
+.post_new {
+  text-align: center;
+}
+.post_show {
+  text-align: center;
+}
+.footer {
+  background-color: #7ec5f5;
+  color: #fff;
+  text-align: center;
+}
+
+
