--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,8 @@
-<h1>投稿確認</h1>
-<p>内容: <%= @post.content %></p>
+<%= render 'header' %>
+
+<div class="post_show">
+  <h1>投稿確認</h1>
+  <p>内容: <%= @post.content %></p>
+</div>
+
+<%= render 'footer' %>
