--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,8 @@
-<h2>ツイートする</h2>
-<%= render 'form' %>
+<%= render 'header' %>
+
+<div class="post_new">
+  <h2>ツイートする</h2>
+  <%= render 'form' %>
+</div>
+
+<%= render 'footer' %>
